--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "sequelize": "sequelize",
@@ -15,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -34,5 +34,6 @@
     "dotenv-cli": "^7.0.0",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.4"
-  }
+  },
+  "description": ""
 }
