--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#4c0dd7",
-        "activityBar.background": "#4c0dd7",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#d24a0d",
+        "activityBar.activeBackground": "#8dd83e",
+        "activityBar.background": "#8dd83e",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#2b82d4",
         "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#4c0dd7",
-        "statusBar.background": "#3b0aa7",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#4c0dd7",
-        "statusBarItem.remoteBackground": "#3b0aa7",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#3b0aa7",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#3b0aa799",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#8dd83e",
+        "statusBar.background": "#73bd26",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#59921d",
+        "statusBarItem.remoteBackground": "#73bd26",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#73bd26",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#73bd2699",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#3b0aa7"
+    "peacock.color": "#73bd26"
 }
